# hello-fastapi

./: .gitignore  README.md  clean.py  pyproject.toml
src/: __init__.py  controller.py  logger.py  main.py  scheduler.py
